save before request spatial direction task

--- a/gmission/src/main/res/layout/hit_summary_activity.xml
+++ b/gmission/src/main/res/layout/hit_summary_activity.xml
@@ -12,15 +12,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@+id/join_btn"
-        android:weightSum="5" >
+        android:orientation="vertical">
 
         <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_height="wrap_content"
             android:id="@+id/hit_content_scroll_view"
             tools:context="hk.ust.gmission.ui.fragments.SelectionHitFragment"
             tools:showIn="@layout/hit_activity">
@@ -33,11 +30,68 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/text_margin"
                     android:textColor="@color/text_shadow"
-                    android:id="@+id/hit_content"/>
-                <ImageView
+                    android:text="@string/message_prompt_campaign"
+                    android:id="@+id/message_prompt_campaign"/>
+                <Button
+                    android:id="@+id/view_compain_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/hit_attachment_img"/>
+                    android:background="@drawable/button_background_states"
+                    android:padding="10dp"
+                    android:layout_margin="@dimen/text_margin"
+                    android:text="@string/label_view_campaign"
+                    android:textColor="@color/text"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="@dimen/text_margin"
+                    android:background="@android:color/darker_gray"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/text_margin"
+                    android:textColor="@color/text_shadow"
+                    android:text="@string/label_view_campaign"
+                    android:id="@+id/hit_content"/>
+
+                <Button
+                    android:id="@+id/answer_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background_states"
+                    android:padding="10dp"
+                    android:layout_margin="@dimen/text_margin"
+                    android:text="@string/label_contribute_photo"
+                    android:textColor="@color/text"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/view_answers_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background_states"
+                    android:padding="10dp"
+                    android:layout_margin="@dimen/text_margin"
+                    android:text="@string/label_view_photos"
+                    android:textColor="@color/text"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+                <Button
+                    android:id="@+id/view_model_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background_states"
+                    android:padding="10dp"
+                    android:layout_margin="@dimen/text_margin"
+                    android:text="@string/label_view_3d_model"
+                    android:textColor="@color/text"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
 
             </LinearLayout>
 
@@ -45,17 +99,6 @@
         </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
-    <Button
-        android:id="@+id/join_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/button_background_states"
-        android:padding="10dp"
-        android:text="@string/label_submit"
-        android:textColor="@color/text"
-        android:textSize="20sp"
-        android:enabled="false"
-        android:textStyle="bold" />
+
 
 </RelativeLayout>
