--- a/gmission/src/main/res/layout/spatial_direct_hit_activity.xml
+++ b/gmission/src/main/res/layout/spatial_direct_hit_activity.xml
@@ -15,34 +15,24 @@
         android:orientation="vertical"
         android:weightSum="5" >
 
-        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:id="@+id/hit_content_scroll_view"
-            tools:context="hk.ust.gmission.ui.fragments.SelectionHitFragment"
-            tools:showIn="@layout/hit_activity">
-            <LinearLayout
+            android:orientation="vertical">
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/text_margin"
-                    android:textColor="@color/text_shadow"
-                    android:text="@string/message_task_instruction_3d"
-                    android:id="@+id/spatial_hit_instruction"/>
-                <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/map"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                android:layout_margin="@dimen/text_margin"
+                android:textColor="@color/text_shadow"
+                android:text="@string/message_task_instruction_3d"
+                android:id="@+id/spatial_hit_instruction"/>
+            <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
-            </LinearLayout>
-
-
-        </android.support.v4.widget.NestedScrollView>
 
         <FrameLayout
             android:id="@+id/container"
@@ -60,6 +50,23 @@
                 android:text="@string/verifying_location_notification"
                 android:visibility="visible"
                 android:id="@+id/verifying_notification"/>
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/image_capture_btn"
+                android:src="@drawable/ic_action_answer_image"
+                android:visibility="invisible"
+                android:layout_centerInParent="true" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/image_photopreview_iv"
+                android:visibility="invisible"
+                android:scaleType="centerCrop"
+                android:src="@drawable/menu_background"
+                android:layout_centerInParent="true" />
         </FrameLayout>
 
     </LinearLayout>
