--- a/gmission/src/main/res/layout/ply_activity.xml
+++ b/gmission/src/main/res/layout/ply_activity.xml
@@ -7,17 +7,21 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/item_wrapper">
 
 
-        <hk.ust.gmission.ui.view.GLView
-            android:id="@+id/gl_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:keepScreenOn="true"
-            android:gravity="center"
-            />
+
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/text_margin"
+        android:textColor="@color/text_shadow"
+        android:text="@string/loading_notification"
+        android:visibility="visible"
+        android:id="@+id/loading_notification"/>
 
 </FrameLayout>
