--- a/gmission/src/main/res/layout/answer_item.xml
+++ b/gmission/src/main/res/layout/answer_item.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical"
+        android:background="@color/pager_background"
         android:padding="10dp">
 
 
